--- a/rust/session-1/Cargo.toml
+++ b/rust/session-1/Cargo.toml
@@ -11,6 +11,8 @@ rand = "0.8.5"
 serde = "1.0.188"
 futures = "0.3.28"
 serde_json = "1.0.64"
+num = "0.4.0"
+image = "0.13.0"
 
 [dependencies.mongodb]
 version = "3.1.0"
